# Algorithm-Server

./: CMakeLists.txt  README.md
generate_poto/: CMakeLists.txt  generate.cc
libs/BT_Stack/: CMakeLists.txt  ReleaseNote.txt
libs/BT_Stack/include/: addflags.h  blueapi.h  blueapi_datatypes.h  blueapi_helper.h  blueapi_msg_downstream.h  blueapi_msg_upstream.h  blueapi_types.h  cfg.h  comapi.h  endialig.h  flags.h  gatt.h  stosif.h
libs/DCL/: CMakeLists.txt  DCL_ReleasesNotes.txt
libs/DCL/include/: DecoderConfig.h  DecoderConstants.h  DecoderInterface.h  DecoderLibRevision.h  DecoderSettings.h  FLD_ReleasesNotes.txt  ID_ReleasesNotes.txt  SD.h  SD_OP.h  SwiftSettings.h
libs/Digimarc/: CMakeLists.txt
libs/Digimarc/include/DigimarcEmbeddedSystems/AutoConfiguration/: MultiBlockAutoConfigurationMethod.h
libs/Digimarc/include/DigimarcEmbeddedSystems/Configuration/: AdaptiveConfiguration.h  AdaptiveRegion.h  AutoCalibratedConfiguration.h  Block.h  CancellationCallback.h  ColorComponentOrder.h  ColorWeights.h  Configuration.h  DetectionShape.h  DetectionShapeBinaryData.h  Handle.h  Key.h  MultiBlockConfiguration.h  PerspectiveParams.h  PixelFormat.h  SimpleVector.h  StatusCode.h  WatermarkType.h
libs/Digimarc/include/DigimarcEmbeddedSystems/SDK/: ApiDefs.h  DigimarcProcessor.h  Information.h  NegativeResultCallback.h  PayloadMetadata.h  PayloadVersionFilter.h  WatermarkCallback.h  WatermarkInformation.h
libs/Digimarc/include/DigimarcEmbeddedSystems/SDK/ExpandedFresh/: ExpandedFreshCallback.h  ExpandedFreshDecodedValues.h  ExpandedFreshInformation.h
libs/Digimarc/include/DigimarcEmbeddedSystems/SDK/Giai/: Giai17Callback.h  Giai17Information.h
libs/Digimarc/include/DigimarcEmbeddedSystems/SDK/Gtin/: Gtin14Callback.h  Gtin14Information.h  Sgtin96Information.h
libs/Digimarc/include/DigimarcEmbeddedSystems/SDK/PosIdentifierBuilder/: AimStringBuilder.h  ApplicationIdentifierFormatOptions.h  ApplicationIdentifierStringBuilder.h  InterfaceType.h  SerialStringBuilder.h  StringBuilderFactory.h  UsbOemStringBuilder.h
libs/Digimarc/include/DigimarcEmbeddedSystems/SDK/SimpleProductID/: Spid96ExtraDataType.h
libs/Digimarc/include/DigimarcEmbeddedSystems/SDK/Upce/: UpceCallback.h  UpceInformation.h
libs/Digimarc/include/DigimarcEmbeddedSystems/Utilities/: BayerTransform.h  Downsample.h  RgbTransform.h  ShannonEntropy.h  UvTransform.h
protos/: route_guide.proto
src/App/: AlServer.cc  CMakeLists.txt  route_guide.pb.cc
src/GrpcLib/: CMakeLists.txt  README.md
src/GrpcLib/include/: GrpcImpl.h  GrpcServer.h  route_guide.grpc.pb.h  route_guide.pb.h
src/GrpcLib/src/: GrpcImpl.cpp  GrpcServer.cpp  route_guide.grpc.pb.cc  route_guide.pb.cc  route_guide_client.cc
src/Helpers/: CMakeLists.txt
src/Helpers/include/: ascii.h  backtrace.h  bitstring.h  crc.h  dataarray.h  dec-timestamp.h  elf.h  elf_arm.h  errors.h  file-utilities.h  hstring.h  hstringarray.h  htime.h  hvector.h  hwstring.h  makepath.h  sha_256.h  string-utilities.h  system.h  templates.h  tinyxml.h  todo.h  uchar.h
src/Helpers/src/: backtrace.cpp  bitstring.cpp  crc.cpp  dec-timestamp.cpp  file-utilities.cpp  hstring.cpp  htime.cpp  hwstring.cpp  makepath.c  sha_256.cpp  string-utilities.cpp  system.cpp  tinyxml.cpp  tinyxmlparser.cpp
src/Logging/: CMakeLists.txt
src/Logging/include/: logging.h
src/Logging/src/: logging.cpp
src/Main/: AppRevision.h  CMakeLists.txt  Main.cpp
src/OSAL/: CMakeLists.txt
src/OSAL/include/: Synchronization.h  WakeupTimerList.h  exception-log.h  realtime.h  threadsafeQ.h  timeout.h
src/OSAL/src/: WakeupTimerList.cpp  exception-log.cpp  realtime.cpp  timeout.cpp
src/PointCloudLib/: CMakeLists.txt
src/PointCloudLib/include/: interactive_icp.h
src/PointCloudLib/src/: interactive_icp.cpp
